--- a/index.html
+++ b/index.html
@@ -412,63 +412,69 @@
     <!-- Contact Section -->
     <section id="contact" class="contact section">
       <div class="container section-title" data-aos="fade-up">
-          <h2>Contact Us</h2>
-          <p>Get in Touch</p>
+        <h2>Contact Us</h2>
+        <p>Get in Touch</p>
       </div>
       <div class="container" data-aos="fade-up" data-aos-delay="100">
-          <div class="row gy-4">
-              <div class="col-lg-4">
-                  <div class="info-item d-flex" data-aos="fade-up" data-aos-delay="300">
-                      <i class="bi bi-geo-alt flex-shrink-0"></i>
-                      <div>
-                          <h3>Address</h3>
-                          <p>32 Cliff End</p>
-                          <p>Purley, Surrey, CR8 1BN</p>
-                      </div>
-                  </div><!-- End Info Item -->
-                  <div class="info-item d-flex" data-aos="fade-up" data-aos-delay="400">
-                      <i class="bi bi-telephone flex-shrink-0"></i>
-                      <div>
-                          <h3>Call Us</h3>
-                          <p>+44 1234 567890</p>
-                      </div>
-                  </div><!-- End Info Item -->
-                  <div class="info-item d-flex" data-aos="fade-up" data-aos-delay="500">
-                      <i class="bi bi-envelope flex-shrink-0"></i>
-                      <div>
-                          <h3>Email Us</h3>
-                          <p>info@forlegacy.co.uk</p>
-                      </div>
-                  </div><!-- End Info Item -->
+
+        <div class="mb-4" data-aos="fade-up" data-aos-delay="200">
+          <iframe style="border:0; width: 100%; height: 270px;" src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2498.835480896483!2d-0.051747249999999995!3d51.22210629999999!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f145!3m3!1m2!1s0x4875f900a235ee0b%3A0xee85d301ea451273!2sLagham%20Park%2C%20South%20Godstone%2C%20Godstone%20RH9%208ER!5e0!3m2!1sen!2suk!4v1726129542292!5m2!1sen!2suk&z=1" width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
+        </div><!-- End Google Maps -->
+
+        <div class="row gy-4">
+          <div class="col-lg-4">
+            <div class="info-item d-flex" data-aos="fade-up" data-aos-delay="300">
+              <i class="bi bi-geo-alt flex-shrink-0"></i>
+              <div>
+                <h3>Address</h3>
+                <p>12 Lagham,</p>
+                <p>South Godstone,</p>
+                <p>Surrey, RH9 8ER</p>
               </div>
-              <div class="col-lg-8">
+            </div><!-- End Info Item -->
+            <div class="info-item d-flex" data-aos="fade-up" data-aos-delay="400">
+              <i class="bi bi-telephone flex-shrink-0"></i>
+              <div>
+                <h3>Call Us</h3>
+                <p> +44 01342 89341</p>
+              </div>
+            </div><!-- End Info Item -->
+            <div class="info-item d-flex" data-aos="fade-up" data-aos-delay="500">
+              <i class="bi bi-envelope flex-shrink-0"></i>
+              <div>
+                <h3>Email Us</h3>
+                <p>info@forlegacy.co.uk</p>
+              </div>
+            </div><!-- End Info Item -->
+          </div>
+          <div class="col-lg-8">
                 <!-- Contact Form -->
                 <form id="contact-form" action="https://formspree.io/f/mdoqpjow" method="POST" class="php-email-form" data-aos="fade-up" data-aos-delay="200">
-                    <div class="row gy-4">
-                        <div class="col-md-6">
-                            <input type="text" name="name" class="form-control" placeholder="Your Name" required>
-                        </div>
-                        <div class="col-md-6">
-                            <input type="email" class="form-control" name="email" placeholder="Your Email" required>
-                        </div>
-                        <div class="col-md-12">
-                            <input type="text" class="form-control" name="subject" placeholder="Subject" required>
-                        </div>
-                        <div class="col-md-12">
-                            <textarea class="form-control" name="message" rows="6" placeholder="Message" required></textarea>
-                        </div>
-                        <div class="col-md-12 text-center">
-                            <div class="loading">Loading</div>
-                            <div class="error-message"></div>
-                            <div class="sent-message">Your message has been sent. Thank you!</div>
-                            <button type="submit">Send Message</button>
-                        </div>
-                    </div>
-                </form>
-            </div><!-- End Contact Form -->
-          </div>
+              <div class="row gy-4">
+                <div class="col-md-6">
+                  <input type="text" name="name" class="form-control" placeholder="Your Name" required="">
+                </div>
+                <div class="col-md-6">
+                  <input type="email" class="form-control" name="email" placeholder="Your Email" required="">
+                </div>
+                <div class="col-md-12">
+                  <input type="text" class="form-control" name="subject" placeholder="Subject" required="">
+                </div>
+                <div class="col-md-12">
+                  <textarea class="form-control" name="message" rows="6" placeholder="Message" required=""></textarea>
+                </div>
+                <div class="col-md-12 text-center">
+                  <div class="loading">Loading</div>
+                  <div class="error-message"></div>
+                  <div class="sent-message">Your message has been sent. Thank you!</div>
+                  <button type="submit">Send Message</button>
+                </div>
+              </div>
+            </form>
+          </div><!-- End Contact Form -->
+        </div>
       </div>
-  </section><!-- End Contact Section -->  
+    </section><!-- /Contact Section -->
 
   </main>
 
