Updated the address
this is a small change of address

--- a/index.html
+++ b/index.html
@@ -487,9 +487,10 @@
               <span class="sitename">For Legacy</span>
             </a>
             <div class="footer-contact pt-3">
-              <p>32 Cliff End</p>
-              <p>Purley, Surrey, CR8 1BN</p>
-              <p class="mt-3"><strong>Phone:</strong> <span>+44 1234 567890</span></p>
+              <p>12 Lagham,</p>
+              <p>South Godstone,</p>
+              <p>Surrey, RH9 8ER</p>
+              <p class="mt-3"><strong>Phone:</strong> <span>+44 01342 89341</span></p>
               <p><strong>Email:</strong> <span>info@forlegacy.co.uk</span></p>
             </div>
             <div class="social-links d-flex mt-4">
