--- a/index.html
+++ b/index.html
@@ -35,6 +35,16 @@
   })(window,document,'script','dataLayer','GTM-P6CV29TN');</script>
   <!-- End Google Tag Manager -->
 
+  <!-- Google tag (gtag.js) -->
+  <script async src="https://www.googletagmanager.com/gtag/js?id=G-8QLB5H46H0"></script>
+  <script>
+    window.dataLayer = window.dataLayer || [];
+    function gtag(){dataLayer.push(arguments);}
+    gtag('js', new Date());
+
+    gtag('config', 'G-8QLB5H46H0');
+  </script>
+
 </head>
 
 <body class="index-page">
