--- a/index.html
+++ b/index.html
@@ -57,6 +57,7 @@
     })(window,document,'https://static.hotjar.com/c/hotjar-','.js?sv=');
   </script>
 
+  <script src="https://cmp.osano.com/AzZuJ4UPSvr0H105i/aa19e24b-f765-45fc-b10d-b5ce7d015890/osano.js"></script>
 </head>
 
 <body class="index-page">
