fix to cta button
updated the cts

--- a/index.html
+++ b/index.html
@@ -200,7 +200,7 @@
             <div class="text-center">
               <h3>Interested?</h3>
               <p>Are you a business owner looking to preserve your legacy and retire? Contact us today to learn how we can help your business thrive for generations to come.</p>
-              <a class="cta-btn" href="#contact">Call To Action</a>
+              <a class="cta-btn" href="#contact">Contact Us</a>
             </div>
           </div>
         </div>
