--- a/index.html
+++ b/index.html
@@ -74,15 +74,14 @@
 
       <nav id="navmenu" class="navmenu">
         <ul>
-          <li><a href="#hero" class="active">Home</a></li>
-          <li><a href="#features">About</a></li>
-          <li><a href="#team">Team</a></li>
-          <li><a href="#services">Principles</a></li>
-          <li><a href="#contact">Contact</a></li>
+            <li><a href="#hero" class="active">Home</a></li>
+            <li><a href="#features">About</a></li>
+            <li><a href="#team">Team</a></li>
+            <li><a href="https://blog.forlegacy.co.uk" target="_blank" rel="noopener noreferrer">Blog</a></li>
+            <li><a href="#contact">Contact</a></li>
         </ul>
         <i class="mobile-nav-toggle d-xl-none bi bi-list"></i>
       </nav>
-
       <a class="btn-getstarted" href="#contact">Get Started</a>
 
     </div>
@@ -537,7 +536,9 @@
               <li><i class="bi bi-chevron-right"></i> <a href="#hero">Home</a></li>
               <li><i class="bi bi-chevron-right"></i> <a href="#team">About us</a></li>
               <li><i class="bi bi-chevron-right"></i> <a href="#services">Principles</a></li>
+              <li><i class="bi bi-chevron-right"></i> <a href="https://blog.forlegacy.co.uk" target="_blank" rel="noopener noreferrer">Blog</a></li>
               <li><i class="bi bi-chevron-right"></i> <a href="/privacy-policy.html" target="_blank" rel="noopener noreferrer">Privacy Policy</a></li>
+              
               
 
             </ul>
