--- a/leaflet.html
+++ b/leaflet.html
@@ -95,8 +95,8 @@
       <div class="container">
         <div class="row justify-content-center text-center" data-aos="fade-up" data-aos-delay="100">
           <div class="col-xl-6 col-lg-8">
-            <h2>Retire & Preserve Your Business Legacy<span>.</span></h2>
-            <p>We are a family-owned company focused on enabling boomer entrepreneurs to retire with their legacy intact whilst stewarding their businesses into the future.</p>
+            <h2>Not sure who will run your business when you retire<span>?</span></h2>
+            <p>92% of small businesses are lacking a successors with 57% having to close down and 34% failing after their owner leaves.</p>
           </div>
         </div>
 
