--- a/leaflet.html
+++ b/leaflet.html
@@ -99,26 +99,25 @@
             <p>92% of small businesses are lacking a successors with 57% having to close down and 34% failing after their owner leaves.</p>
           </div>
         </div>
-
-        <div class="row gy-4 mt-5 justify-content-center" data-aos="fade-up" data-aos-delay="200">
-          <div class="col-xl-2 col-md-4" data-aos="fade-up" data-aos-delay="300">
-            <div class="icon-box">
-              <i class="bi bi-award"></i>
-              <h3><a href="#services">Established</a></h3>
+          <div class="row gy-4 mt-5 justify-content-center" data-aos="fade-up" data-aos-delay="200">
+            <div class="col-xl-2 col-md-4" data-aos="fade-up" data-aos-delay="300">
+              <div class="icon-box">
+                <i class="bi bi-award"></i>
+                <h3><a href="#services">Established</a></h3>
+              </div>
             </div>
-          </div>
-          <div class="col-xl-2 col-md-4" data-aos="fade-up" data-aos-delay="400">
-            <div class="icon-box">
-              <i class="bi bi-tools"></i>
-              <h3><a href="#services">Construction</a></h3>
+            <div class="col-xl-2 col-md-4" data-aos="fade-up" data-aos-delay="400">
+              <div class="icon-box">
+                <i class="bi bi-tools"></i>
+                <h3><a href="#services">Construction</a></h3>
+              </div>
             </div>
-          </div>
-          <div class="col-xl-2 col-md-4" data-aos="fade-up" data-aos-delay="500">
-            <div class="icon-box">
-              <i class="bi bi-briefcase"></i>
-              <h3><a href="#services">Businesses</a></h3>
+            <div class="col-xl-2 col-md-4" data-aos="fade-up" data-aos-delay="500">
+              <div class="icon-box">
+                <i class="bi bi-briefcase"></i>
+                <h3><a href="#services">Businesses</a></h3>
+              </div>
             </div>
-          </div>
           <!-- <div class="col-xl-2 col-md-4" data-aos="fade-up" data-aos-delay="600">
             <div class="icon-box">
               <i class="bi bi-card-list"></i>
@@ -135,13 +134,15 @@
       </div>
     </section><!-- /Hero Section -->
 
+    
+
      <!-- Features Section -->
      <section id="features" class="features section">
 
       <div class="container">
         <div class="section-title" data-aos="fade-up">
           <h2>For Founders</h2>
-          <p>What we Offer</p>
+          <p>What We Offer</p>
         </div>
   
         <div class="row gy-4">
@@ -160,10 +161,17 @@
             <div class="features-item d-flex mt-5 ps-0 ps-lg-3" data-aos="fade-up" data-aos-delay="300">
               <i class="bi bi-tree flex-shrink-0"></i>
               <div>
+                <h4>Zero Time Wasted Guarantee</h4>
+                <p>We won't waste your time, we even pay you for it throughout the process.</p>
+              </div>
+            </div><!-- End Features Item -->
+            <!-- <div class="features-item d-flex mt-5 ps-0 ps-lg-3" data-aos="fade-up" data-aos-delay="300">
+              <i class="bi bi-tree flex-shrink-0"></i>
+              <div>
                 <h4>Your legacy</h4>
                 <p>It's about continuing and extending your legacy not replacing it. We believe you have done a great job and you need someone to continue this journey for you.</p>
               </div>
-            </div><!-- End Features Item-->
+            </div>End Features Item -->
 
             <div class="features-item d-flex mt-5 ps-0 ps-lg-3" data-aos="fade-up" data-aos-delay="400">
               <i class="bi bi-shield flex-shrink-0"></i>
@@ -188,6 +196,71 @@
 
     </section><!-- /Features Section -->
 
+    <!-- Why Sell to For Legacy Section -->
+    <section id="why-sell" class="services section">
+      <div class="container section-title" data-aos="fade-up">
+        <h2>Why Sell to For Legacy?</h2>
+        <p>Your options</p>
+      </div>
+      <div class="container">
+        <div class="row gy-4">
+          <!-- Shut Down Column - Darker and Duller -->
+          <div class="col-lg-4 col-md-6" data-aos="fade-up" data-aos-delay="100">
+            <div class="service-item position-relative" style="background-color: #00000076; color: #ffffff;">
+              <div class="icon">
+                <i class="bi bi-exclamation-triangle-fill"></i>
+              </div>
+              <h3 style="color: #ffffff;">Shut Down</h3>
+              <p>
+                ✔ Retirement<br>
+                ✘ No cash to founders<br>
+                ✘ No work for your employees<br>
+                ✘ Customers let down<br>
+                ✘ Nothing to show for the years<br>
+                ✘ Legacy finished
+              </p>
+            </div>
+          </div><!-- End Shut Down -->
+
+          <!-- Private Equity Column - Darker and Duller -->
+          <div class="col-lg-4 col-md-6" data-aos="fade-up" data-aos-delay="200">
+            <div class="service-item position-relative" style="background-color: #00000076; color: #ffffff;">
+              <div class="icon">
+                <i class="bi bi-cash-stack"></i>
+              </div>
+              <h3 style="color: #ffffff;">Use a Broker</h3>
+              <p>
+                ✔ Retirement<br>
+                ✔ Cash Payout<br>
+                ✘ 3-6 month process<br>
+                ✘ Employees fired<br>
+                ✘ Intervene and change your culture<br>
+                ✘ Typically flip your company in 3-5 years
+              </p>
+            </div>
+          </div><!-- End Private Equity -->
+
+          <!-- For Legacy Column - Highlighted -->
+          <div class="col-lg-4 col-md-6" data-aos="fade-up" data-aos-delay="300">
+            <div class="service-item position-relative" ">
+              <div class="icon">
+                <i class="bi bi-award-fill"></i>
+              </div>
+              <h3>ForLegacy</h3>
+              <p>
+                ✔ Retirement<br>
+                ✔ Cash Payout<br>
+                ✔ Flexible 30-day process<br>
+                ✔ Operate as-is with no culture change<br>
+                ✔ Legacy protected<br>
+                ✔ Holds companies for the long term
+              </p>
+            </div>
+          </div><!-- End For Legacy -->
+        </div>
+      </div>
+    </section><!-- /Why Sell to For Legacy Section -->
+
     <!-- Call To Action Section -->
     <section id="call-to-action" class="call-to-action section dark-background">
 
@@ -197,9 +270,9 @@
         <div class="row justify-content-center" data-aos="zoom-in" data-aos-delay="100">
           <div class="col-xl-10">
             <div class="text-center">
-              <h3>Interested?</h3>
-              <p>Are you a business owner looking to preserve your legacy and retire? Contact us today to learn how we can help your business thrive for generations to come.</p>
-              <a class="cta-btn" href="#contact">Contact Us</a>
+              <h3>Be part of the 8%</h3>
+              <p>Ready to Secure Your Legacy? Don’t wait until it’s too late. With our expert team and commitment to preserving your business’s legacy, you can rest assured your company will continue to thrive long after you step away. Schedule a call today and learn how we can support you.</p>
+              <a class="cta-btn" href="https://calendly.com/forlegacy/synergycall?month=2024-10">Contact Us</a>
             </div>
           </div>
         </div>
@@ -263,69 +336,7 @@
       </div>
     </section><!-- /Team Section -->
 
-    <!-- About Section -->
-    <section id="about" class="about section">
-      <div class="container" data-aos="fade-up" data-aos-delay="100">
-        <div class="row gy-4">
-          <div class="col-lg-6 order-1 order-lg-2">
-            <img src="assets/img/about.jpg" class="img-fluid" alt="">
-          </div>
-          <div class="col-lg-6 order-2 order-lg-1 content">
-            <h3>More About Us</h3>
-            <p>
-              At For Legacy Investment, we are dedicated to acquiring and nurturing well-established businesses, particularly from owners who are looking to retire. We understand the emotional and financial significance of these businesses, and our mission is to continue their legacy by maintaining their core values, brand identity, and long-term success.
-            </p>
-            <ul>
-              <li><i class="bi bi-check2-all"></i> <span><strong>Stewardship over Ownership:</strong> We don’t just acquire businesses, we take on the responsibility of preserving their legacy. Our focus is on safeguarding the values and brands built over generations.</span></li>
-              <li><i class="bi bi-check2-all"></i> <span><strong>Long-Term Investment:</strong> Our approach is to hold businesses for the long run—over decade's ensuring stability, sustained growth, and innovation. We believe in building on success rather than selling off assets.</span></li>
-              <li><i class="bi bi-check2-all"></i> <span><strong>Focused Growth:</strong> We carefully expand into new business models only when we have mastered our current focus areas, allowing for controlled, sustainable growth.</span></li>
-            </ul>
-            <p>
-              With over 36 years of experience in construction and a proven track record in scaling multimillion-pound companies, we combine industry expertise and cutting-edge technology to help businesses continue their growth. At For Legacy, we are committed to building lasting partnerships and ensuring that your hard-earned business thrives well into the future.
-            </p>
-          </div>
-        </div>
-      </div>
-    </section><!-- /About Section -->
-
-    <!-- Services Section -->
-    <section id="services" class="services section">
-      <div class="container section-title" data-aos="fade-up">
-        <h2>Our Principles</h2>
-        <p>How we operate</p>
-      </div>
-      <div class="container">
-        <div class="row gy-4">
-          <div class="col-lg-4 col-md-6" data-aos="fade-up" data-aos-delay="100">
-            <div class="service-item position-relative">
-              <div class="icon">
-                <i class="bi bi-activity"></i>
-              </div>
-              <h3>Buy Businesses</h3>
-              <p>We specialize in acquiring businesses from retiring owners, ensuring a smooth transition and the preservation of their legacy.</p>
-            </div>
-          </div><!-- End Service Item -->
-          <div class="col-lg-4 col-md-6" data-aos="fade-up" data-aos-delay="200">
-            <div class="service-item position-relative">
-              <div class="icon">
-                <i class="bi bi-broadcast"></i>
-              </div>
-              <h3>Invest in them</h3>
-              <p>Our team provides expert management to maintain and grow the businesses we acquire, leveraging decades of industry experience.</p>
-            </div>
-          </div><!-- End Service Item -->
-          <div class="col-lg-4 col-md-6" data-aos="fade-up" data-aos-delay="300">
-            <div class="service-item position-relative">
-              <div class="icon">
-                <i class="bi bi-easel"></i>
-              </div>
-              <h3>For the Long-Term</h3>
-              <p>We are committed to the long-term growth of the businesses we acquire, focusing on innovation and sustainable practices.</p>
-            </div>
-          </div><!-- End Service Item -->
-        </div>
-      </div>
-    </section><!-- /Services Section -->
+    
 
      <!-- Testimonials Section -->
      <section id="testimonials" class="testimonials section dark-background">
@@ -505,6 +516,70 @@
         </div>
       </div>
     </section><!-- /Contact Section -->
+  
+  
+  <!-- Services Section -->
+  <section id="services" class="services section">
+    <div class="container section-title" data-aos="fade-up">
+      <h2>Our Principles</h2>
+      <p>How we operate</p>
+    </div>
+    <div class="container">
+      <div class="row gy-4">
+        <div class="col-lg-4 col-md-6" data-aos="fade-up" data-aos-delay="100">
+          <div class="service-item position-relative">
+            <div class="icon">
+              <i class="bi bi-activity"></i>
+            </div>
+            <h3>Buy Businesses</h3>
+            <p>We specialize in acquiring businesses from retiring owners, ensuring a smooth transition and the preservation of their legacy.</p>
+          </div>
+        </div><!-- End Service Item -->
+        <div class="col-lg-4 col-md-6" data-aos="fade-up" data-aos-delay="200">
+          <div class="service-item position-relative">
+            <div class="icon">
+              <i class="bi bi-broadcast"></i>
+            </div>
+            <h3>Invest in them</h3>
+            <p>Our team provides expert management to maintain and grow the businesses we acquire, leveraging decades of industry experience.</p>
+          </div>
+        </div><!-- End Service Item -->
+        <div class="col-lg-4 col-md-6" data-aos="fade-up" data-aos-delay="300">
+          <div class="service-item position-relative">
+            <div class="icon">
+              <i class="bi bi-easel"></i>
+            </div>
+            <h3>For the Long-Term</h3>
+            <p>We are committed to the long-term growth of the businesses we acquire, focusing on innovation and sustainable practices.</p>
+          </div>
+        </div><!-- End Service Item -->
+      </div>
+    </div>
+  </section><!-- /Services Section -->
+  <!-- About Section -->
+  <!-- <section id="about" class="about section">
+    <div class="container" data-aos="fade-up" data-aos-delay="100">
+      <div class="row gy-4">
+        <div class="col-lg-6 order-1 order-lg-2">
+          <img src="assets/img/about.jpg" class="img-fluid" alt="">
+        </div>
+        <div class="col-lg-6 order-2 order-lg-1 content">
+          <h3>More About Us</h3>
+          <p>
+            At For Legacy Investment, we are dedicated to acquiring and nurturing well-established businesses, particularly from owners who are looking to retire. We understand the emotional and financial significance of these businesses, and our mission is to continue their legacy by maintaining their core values, brand identity, and long-term success.
+          </p>
+          <ul>
+            <li><i class="bi bi-check2-all"></i> <span><strong>Stewardship over Ownership:</strong> We don’t just acquire businesses, we take on the responsibility of preserving their legacy. Our focus is on safeguarding the values and brands built over generations.</span></li>
+            <li><i class="bi bi-check2-all"></i> <span><strong>Long-Term Investment:</strong> Our approach is to hold businesses for the long run—over decade's ensuring stability, sustained growth, and innovation. We believe in building on success rather than selling off assets.</span></li>
+            <li><i class="bi bi-check2-all"></i> <span><strong>Focused Growth:</strong> We carefully expand into new business models only when we have mastered our current focus areas, allowing for controlled, sustainable growth.</span></li>
+          </ul>
+          <p>
+            With over 36 years of experience in construction and a proven track record in scaling multimillion-pound companies, we combine industry expertise and cutting-edge technology to help businesses continue their growth. At For Legacy, we are committed to building lasting partnerships and ensuring that your hard-earned business thrives well into the future.
+          </p>
+        </div>
+      </div>
+    </div>
+  </section>/About Section -->
 
   </main>
 
