--- a/leaflet.html
+++ b/leaflet.html
@@ -96,7 +96,7 @@
         <div class="row justify-content-center text-center" data-aos="fade-up" data-aos-delay="100">
           <div class="col-xl-6 col-lg-8">
             <h2>Not sure who will run your business when you retire<span>?</span></h2>
-            <p>92% of small businesses are lacking a successors with 57% having to close down and 34% failing after their owner leaves.</p>
+            <p>92% of small businesses are lacking a successor with 57% having to close down and 34% failing after their owner leaves.</p>
           </div>
         </div>
           <div class="row gy-4 mt-5 justify-content-center" data-aos="fade-up" data-aos-delay="200">
