--- a/index.html
+++ b/index.html
@@ -457,7 +457,7 @@
               <i class="bi bi-geo-alt flex-shrink-0"></i>
               <div>
                 <h3>Address</h3>
-                <p>12 Lagham,</p>
+                <p>12 Lagham Park,</p>
                 <p>South Godstone,</p>
                 <p>Surrey, RH9 8ER</p>
               </div>
@@ -466,7 +466,7 @@
               <i class="bi bi-telephone flex-shrink-0"></i>
               <div>
                 <h3>Call Us</h3>
-                <p> +44 01342 89341</p>
+                <p> +44 01342 893415</p>
               </div>
             </div><!-- End Info Item -->
             <div class="info-item d-flex" data-aos="fade-up" data-aos-delay="500">
@@ -517,10 +517,10 @@
               <span class="sitename">For Legacy</span>
             </a>
             <div class="footer-contact pt-3">
-              <p>12 Lagham,</p>
+              <p>12 Lagham Park,</p>
               <p>South Godstone,</p>
               <p>Surrey, RH9 8ER</p>
-              <p class="mt-3"><strong>Phone:</strong> <span>+44 01342 89341</span></p>
+              <p class="mt-3"><strong>Phone:</strong> <span>+44 01342 893415</span></p>
               <p><strong>Email:</strong> <span>info@forlegacy.co.uk</span></p>
             </div>
             <div class="social-links d-flex mt-4">
