--- a/leaflet.html
+++ b/leaflet.html
@@ -6,7 +6,7 @@
   <meta content="width=device-width, initial-scale=1.0" name="viewport">
   <title>For Legacy Investment Ltd</title>
   <meta name="description" content="For Legacy Investment Ltd - Preserving and Growing Your Business Legacy.">
-  <meta name="keywords" content="Investment, Business Legacy, Family-Owned, Construction, Succession Planning">
+  <meta name="keywords" content="Investment, Business Legacy, Family-Owned, Removal, Succession Planning">
 
   <!-- Favicons -->
   <link href="assets/img/favicon.png" rel="icon">
@@ -95,27 +95,27 @@
       <div class="container">
         <div class="row justify-content-center text-center" data-aos="fade-up" data-aos-delay="100">
           <div class="col-xl-6 col-lg-8">
-            <h2>Not sure who will run your business when you retire<span>?</span></h2>
-            <p>92% of small businesses are lacking a successor with 57% having to close down and 34% failing after their owner leaves.</p>
+            <h2>Not sure who will run your removal company when you retire<span>?</span></h2>
+            <p>92% of small businesses have no successor. Most will close or falter when their owners retires. Your legacy deserves better. We ensure it lives on.</p>
           </div>
         </div>
           <div class="row gy-4 mt-5 justify-content-center" data-aos="fade-up" data-aos-delay="200">
             <div class="col-xl-2 col-md-4" data-aos="fade-up" data-aos-delay="300">
               <div class="icon-box">
                 <i class="bi bi-award"></i>
-                <h3><a href="#services">Established</a></h3>
+                <h3><a href="#services">Preserve Legacy</a></h3>
               </div>
             </div>
             <div class="col-xl-2 col-md-4" data-aos="fade-up" data-aos-delay="400">
               <div class="icon-box">
-                <i class="bi bi-tools"></i>
-                <h3><a href="#services">Construction</a></h3>
+                <i class="bi bi-shield"></i>
+                <h3><a href="#services">Protect People</a></h3>
               </div>
             </div>
             <div class="col-xl-2 col-md-4" data-aos="fade-up" data-aos-delay="500">
               <div class="icon-box">
-                <i class="bi bi-briefcase"></i>
-                <h3><a href="#services">Businesses</a></h3>
+                <i class="bi bi-graph-up-arrow"></i>
+                <h3><a href="#services">Continue Growth</a></h3>
               </div>
             </div>
           <!-- <div class="col-xl-2 col-md-4" data-aos="fade-up" data-aos-delay="600">
@@ -468,7 +468,7 @@
               <i class="bi bi-geo-alt flex-shrink-0"></i>
               <div>
                 <h3>Address</h3>
-                <p>12 Lagham,</p>
+                <p>12 Lagham Park,</p>
                 <p>South Godstone,</p>
                 <p>Surrey, RH9 8ER</p>
               </div>
@@ -477,7 +477,7 @@
               <i class="bi bi-telephone flex-shrink-0"></i>
               <div>
                 <h3>Call Us</h3>
-                <p> +44 01342 89341</p>
+                <p> +44 01342 893415</p>
               </div>
             </div><!-- End Info Item -->
             <div class="info-item d-flex" data-aos="fade-up" data-aos-delay="500">
@@ -592,10 +592,10 @@
               <span class="sitename">For Legacy</span>
             </a>
             <div class="footer-contact pt-3">
-              <p>12 Lagham,</p>
+              <p>12 Lagham Park,</p>
               <p>South Godstone,</p>
               <p>Surrey, RH9 8ER</p>
-              <p class="mt-3"><strong>Phone:</strong> <span>+44 01342 89341</span></p>
+              <p class="mt-3"><strong>Phone:</strong> <span>+44 01342 893415</span></p>
               <p><strong>Email:</strong> <span>info@forlegacy.co.uk</span></p>
             </div>
             <div class="social-links d-flex mt-4">
