Assistant checkpoint: Add performance, SEO, and accessibility improvements
Assistant generated file changes:
- index.html: Add lazy loading to images, Enhance SEO meta tags, Add ARIA labels for accessibility, Fix Google Tag Manager consent sequencing

---

User prompt:

That worked. What improvements could you see to do on this website?

--- a/index.html
+++ b/index.html
@@ -5,8 +5,8 @@
   <meta charset="utf-8">
   <meta content="width=device-width, initial-scale=1.0" name="viewport">
   <title>For Legacy Investment Ltd</title>
-  <meta name="description" content="For Legacy Investment Ltd - Preserving and Growing Your Business Legacy.">
-  <meta name="keywords" content="Investment, Business Legacy, Family-Owned, Construction, Succession Planning">
+  <meta name="description" content="For Legacy Investment Ltd - Expert business succession planning and legacy preservation for retiring entrepreneurs. We help preserve your business legacy and ensure continued growth.">
+  <meta name="keywords" content="Business Legacy, Succession Planning, Retirement Planning, Business Acquisition, Family Business, Construction Business, Business Transition, Legacy Preservation">
 
   <!-- Favicons -->
   <link href="assets/img/favicon.png" rel="icon">
@@ -26,6 +26,9 @@
 
   <!-- Main CSS File -->
   <link href="assets/css/main.css" rel="stylesheet">
+
+  <!-- Osano Consent Management -->
+  <script src="https://cmp.osano.com/AzZuJ4UPSvr0H105i/aa19e24b-f765-45fc-b10d-b5ce7d015890/osano.js"></script>
 
   <!-- Google Tag Manager -->
   <script>(function(w,d,s,l,i){w[l]=w[l]||[];w[l].push({'gtm.start':
@@ -82,7 +85,7 @@
         </ul>
         <i class="mobile-nav-toggle d-xl-none bi bi-list"></i>
       </nav>
-      <a class="btn-getstarted" href="https://calendly.com/forlegacy/synergycall?month=2024-10">Get Started</a>
+      <a class="btn-getstarted" href="https://calendly.com/forlegacy/synergycall?month=2024-10" aria-label="Schedule a consultation">Get Started</a>
 
     </div>
   </header>
@@ -268,7 +271,7 @@
       <div class="container" data-aos="fade-up" data-aos-delay="100">
         <div class="row gy-4">
           <div class="col-lg-6 order-1 order-lg-2">
-            <img src="assets/img/about.jpg" class="img-fluid" alt="">
+            <img src="assets/img/about.jpg" class="img-fluid" loading="lazy" alt="">
           </div>
           <div class="col-lg-6 order-2 order-lg-1 content">
             <h3>More About Us</h3>
