Assistant checkpoint: Update fonts and layout for removal company focus
Assistant generated file changes:
- index.html: Update fonts and hero section content, Update hero section messaging for removal companies, Update hero icons for removal focus
- assets/css/main.css: Update font variables and hero section styles

---

User prompt:

What are some alternative fonts we could look at or different layouts for the index.html page? I want it to appeal to removal company owners now and not contruction

--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
   <!-- Fonts -->
   <link href="https://fonts.googleapis.com" rel="preconnect">
   <link href="https://fonts.gstatic.com" rel="preconnect" crossorigin>
-  <link href="https://fonts.googleapis.com/css2?family=Crimson+Pro:wght@400;600;700&family=Source+Sans+Pro:wght@300;400;600;700&display=swap" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;600;700&family=Open+Sans:wght@300;400;600;700&display=swap" rel="stylesheet">
 
   <!-- Vendor CSS Files -->
   <link href="assets/vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet">
@@ -98,16 +98,16 @@
       <div class="container">
         <div class="row justify-content-center text-center" data-aos="fade-up" data-aos-delay="100">
           <div class="col-xl-6 col-lg-8">
-            <h2>Retire & Preserve Your Business Legacy<span>.</span></h2>
-            <p>We are a family-owned company focused on enabling boomer entrepreneurs to retire with their legacy intact whilst stewarding their businesses into the future.</p>
+            <h2>Your Removal Company's Future<span>.</span></h2>
+            <p>We help successful removal company owners plan their retirement while ensuring their business, team, and customers are taken care of for generations to come.</p>
           </div>
         </div>
 
         <div class="row gy-4 mt-5 justify-content-center" data-aos="fade-up" data-aos-delay="200">
           <div class="col-xl-2 col-md-4" data-aos="fade-up" data-aos-delay="300">
             <div class="icon-box">
-              <i class="bi bi-award"></i>
-              <h3><a href="#services">Established</a></h3>
+              <i class="bi bi-truck"></i>
+              <h3><a href="#services">Fleet Preserved</a></h3>
             </div>
           </div>
           <div class="col-xl-2 col-md-4" data-aos="fade-up" data-aos-delay="400">
