Assistant checkpoint: Update hero section icon boxes
Assistant generated file changes:
- index.html: Update hero section icon boxes

---

User prompt:

<div class="col-xl-2 col-md-4" data-aos="fade-up" data-aos-delay="300">
              <div class="icon-box">
                <i class="bi bi-award"></i>
                <h3><a href="#services">Preserve Legacy</a></h3>
              </div>
            </div>
            <div class="col-xl-2 col-md-4" data-aos="fade-up" data-aos-delay="400">
              <div class="icon-box">
                <i class="bi bi-shield"></i>
                <h3><a href="#services">Protect People</a></h3>
              </div>
            </div>
            <div class="col-xl-2 col-md-4" data-aos="fade-up" data-aos-delay="500">
              <div class="icon-box">
                <i class="bi bi-graph-up-arrow"></i>
                <h3><a href="#services">Continue Growth</a></h3>
              </div>
            </div> can we use this instead

--- a/index.html
+++ b/index.html
@@ -106,20 +106,20 @@
         <div class="row gy-4 mt-5 justify-content-center" data-aos="fade-up" data-aos-delay="200">
           <div class="col-xl-2 col-md-4" data-aos="fade-up" data-aos-delay="300">
             <div class="icon-box">
-              <i class="bi bi-truck"></i>
-              <h3><a href="#services">Fleet Preserved</a></h3>
+              <i class="bi bi-award"></i>
+              <h3><a href="#services">Preserve Legacy</a></h3>
             </div>
           </div>
           <div class="col-xl-2 col-md-4" data-aos="fade-up" data-aos-delay="400">
             <div class="icon-box">
-              <i class="bi bi-tools"></i>
-              <h3><a href="#services">Construction</a></h3>
+              <i class="bi bi-shield"></i>
+              <h3><a href="#services">Protect People</a></h3>
             </div>
           </div>
           <div class="col-xl-2 col-md-4" data-aos="fade-up" data-aos-delay="500">
             <div class="icon-box">
-              <i class="bi bi-briefcase"></i>
-              <h3><a href="#services">Businesses</a></h3>
+              <i class="bi bi-graph-up-arrow"></i>
+              <h3><a href="#services">Continue Growth</a></h3>
             </div>
           </div>
           <!-- <div class="col-xl-2 col-md-4" data-aos="fade-up" data-aos-delay="600">
