--- a/index.html
+++ b/index.html
@@ -239,10 +239,8 @@
               <div class="member-img">
                 <img src="assets/img/team/team-1.jpg" class="img-fluid" alt="">
                 <div class="social">
-                  <a href=""><i class="bi bi-twitter-x"></i></a>
-                  <a href=""><i class="bi bi-facebook"></i></a>
-                  <a href=""><i class="bi bi-instagram"></i></a>
-                  <a href=""><i class="bi bi-linkedin"></i></a>
+                  <a href="https://x.com/danieljsmythe" target="_blank" rel="noopener"><i class="bi bi-twitter-x"></i></a>
+                  <a href="https://www.linkedin.com/in/danieljsmythe" target="_blank" rel="noopener"><i class="bi bi-linkedin"></i></a>
                 </div>
               </div>
               <div class="member-info">
