--- a/index.html
+++ b/index.html
@@ -406,7 +406,7 @@
                 <div class="stats-item d-flex">
                   <i class="bi bi-clock-history flex-shrink-0"></i>
                   <div>
-                    <span data-purecounter-start="0" data-purecounter-end="51" data-purecounter-duration="1" class="purecounter"></span>
+                    <span data-purecounter-start="0" data-purecounter-end="51" data-purecounter-duration="2" class="purecounter" data-aos="fade-up"></span>
                     <p><strong>Years</strong> <span>of combined experience running businesses</span></p>
                   </div>
                 </div>
@@ -655,3 +655,39 @@
 </body>
 
 </html>
+
+<div class="floating-contact">
+  <a href="https://calendly.com/forlegacy/synergycall?month=2024-10" class="floating-btn">
+    <i class="bi bi-chat-dots"></i>
+    <span>Let's Talk</span>
+  </a>
+</div>
+
+
+<section id="success-metrics" class="section">
+  <div class="container">
+    <div class="row text-center">
+      <div class="col-12">
+        <h3 class="mb-4">Our Success Metrics</h3>
+        <div class="success-timeline">
+          <div class="timeline-item">
+            <span class="year">2020</span>
+            <p>Started our journey</p>
+          </div>
+          <div class="timeline-item">
+            <span class="year">2021</span>
+            <p>First successful acquisition</p>
+          </div>
+          <div class="timeline-item">
+            <span class="year">2022</span>
+            <p>Expanded to 5 businesses</p>
+          </div>
+          <div class="timeline-item">
+            <span class="year">2023</span>
+            <p>£10M combined revenue</p>
+          </div>
+        </div>
+      </div>
+    </div>
+  </div>
+</section>
