Assistant checkpoint: Move success metrics section before contact section
Assistant generated file changes:
- index.html: Move success metrics section, Remove duplicate success metrics section

---

User prompt:

lets move our success metrics to another page not under the footer

--- a/index.html
+++ b/index.html
@@ -513,7 +513,36 @@
       </div>
     </section><!-- /Contact Section -->
 
-  </main>
+  <!-- Success Metrics Section -->
+    <section id="success-metrics" class="section">
+      <div class="container">
+        <div class="row text-center">
+          <div class="col-12">
+            <h3 class="mb-4">Our Success Metrics</h3>
+            <div class="success-timeline">
+              <div class="timeline-item">
+                <span class="year">2020</span>
+                <p>Started our journey</p>
+              </div>
+              <div class="timeline-item">
+                <span class="year">2021</span>
+                <p>First successful acquisition</p>
+              </div>
+              <div class="timeline-item">
+                <span class="year">2022</span>
+                <p>Expanded to 5 businesses</p>
+              </div>
+              <div class="timeline-item">
+                <span class="year">2023</span>
+                <p>£10M combined revenue</p>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+    </section>
+
+</main>
 
   <footer id="footer" class="footer dark-background">
     <div class="footer-top">
@@ -664,30 +693,4 @@
 </div>
 
 
-<section id="success-metrics" class="section">
-  <div class="container">
-    <div class="row text-center">
-      <div class="col-12">
-        <h3 class="mb-4">Our Success Metrics</h3>
-        <div class="success-timeline">
-          <div class="timeline-item">
-            <span class="year">2020</span>
-            <p>Started our journey</p>
-          </div>
-          <div class="timeline-item">
-            <span class="year">2021</span>
-            <p>First successful acquisition</p>
-          </div>
-          <div class="timeline-item">
-            <span class="year">2022</span>
-            <p>Expanded to 5 businesses</p>
-          </div>
-          <div class="timeline-item">
-            <span class="year">2023</span>
-            <p>£10M combined revenue</p>
-          </div>
-        </div>
-      </div>
-    </div>
-  </div>
-</section>
+
