Assistant checkpoint: Update Success Metrics section with new title and timeline
Assistant generated file changes:
- index.html: Update Success Metrics section title and timeline

---

User prompt:

Change the titel to our vision and journey so far make the background the same as track record for success put started in 2024, Jan 2025 for first successful acquistion 2026 for 5 and 2028 and combined £10million positive cash flow

--- a/index.html
+++ b/index.html
@@ -513,28 +513,28 @@
       </div>
     </section><!-- /Contact Section -->
 
-  <!-- Success Metrics Section -->
-    <section id="success-metrics" class="section">
+  <!-- Vision and Journey Section -->
+    <section id="success-metrics" class="stats section">
       <div class="container">
         <div class="row text-center">
           <div class="col-12">
-            <h3 class="mb-4">Our Success Metrics</h3>
+            <h3 class="mb-4">Our Vision and Journey So Far</h3>
             <div class="success-timeline">
               <div class="timeline-item">
-                <span class="year">2020</span>
+                <span class="year">2024</span>
                 <p>Started our journey</p>
               </div>
               <div class="timeline-item">
-                <span class="year">2021</span>
+                <span class="year">2025</span>
                 <p>First successful acquisition</p>
               </div>
               <div class="timeline-item">
-                <span class="year">2022</span>
+                <span class="year">2026</span>
                 <p>Expanded to 5 businesses</p>
               </div>
               <div class="timeline-item">
-                <span class="year">2023</span>
-                <p>£10M combined revenue</p>
+                <span class="year">2028</span>
+                <p>£10M combined positive cash flow</p>
               </div>
             </div>
           </div>
