--- a/index.html
+++ b/index.html
@@ -534,7 +534,7 @@
               </div>
               <div class="timeline-item">
                 <span class="year">2028</span>
-                <p>£10M combined positive cash flow</p>
+                <p>£10M+ combined positive cash flow portfolio</p>
               </div>
             </div>
           </div>
