--- a/index.html
+++ b/index.html
@@ -587,15 +587,10 @@
               <li><i class="bi bi-chevron-right"></i> <a href="#">Long-Term Growth</a></li>
             </ul>
           </div>
-          <div class="col-lg-4 col-md-12 footer-newsletter">
-            <h4>Our Newsletter</h4>
+          <div class="col-lg-4 col-md-12">
+            <h4>Join Our Newsletter</h4>
             <p>Subscribe to our newsletter for the latest updates on our services and business opportunities.</p>
-            <form action="forms/newsletter.php" method="post" class="php-email-form">
-              <div class="newsletter-form"><input type="email" name="email"><input type="submit" value="Subscribe"></div>
-              <div class="loading">Loading</div>
-              <div class="error-message"></div>
-              <div class="sent-message">Your subscription request has been sent. Thank you!</div>
-            </form>
+            <a href="#contact" class="cta-btn">Contact Us</a>
           </div>
         </div>
       </div>
