Assistant checkpoint: Update testimonials with removal company examples
Assistant generated file changes:
- index.html: Update testimonials with removal companies

---

User prompt:

Can you update the testimonials and make them removal companies and suggest improvements

--- a/index.html
+++ b/index.html
@@ -358,14 +358,14 @@
             <div class="swiper-slide">
               <div class="testimonial-item">
                 <img src="assets/img/testimonials/testimonials-1.jpg" class="testimonial-img" alt="">
-                <h3>Steve Macey</h3>
-                <h4>Business Owner</h4>
+                <h3>David Thompson</h3>
+                <h4>Thompson & Sons Removals</h4>
                 <div class="stars">
                   <i class="bi bi-star-fill"></i><i class="bi bi-star-fill"></i><i class="bi bi-star-fill"></i><i class="bi bi-star-fill"></i><i class="bi bi-star-fill"></i>
                 </div>
                 <p>
                   <i class="bi bi-quote quote-icon-left"></i>
-                  <span>For Legacy helped me transition my business seamlessly, ensuring that my brand's legacy continues for the next generation.</span>
+                  <span>After 35 years in the removal business, finding someone who values our legacy as much as we do was crucial. For Legacy ensured a smooth transition while maintaining our reputation for excellence.</span>
                   <i class="bi bi-quote quote-icon-right"></i>
                 </p>
               </div>
@@ -373,14 +373,29 @@
             <div class="swiper-slide">
               <div class="testimonial-item">
                 <img src="assets/img/testimonials/testimonials-2.jpg" class="testimonial-img" alt="">
-                <h3>Laura Penfold</h3>
-                <h4>Penfold design and construction</h4>
+                <h3>Sarah Richardson</h3>
+                <h4>Richardson's Moving Solutions</h4>
                 <div class="stars">
                   <i class="bi bi-star-fill"></i><i class="bi bi-star-fill"></i><i class="bi bi-star-fill"></i><i class="bi bi-star-fill"></i><i class="bi bi-star-fill"></i>
                 </div>
                 <p>
                   <i class="bi bi-quote quote-icon-left"></i>
-                  <span>The team at For Legacy understood my business needs and provided exceptional support throughout the transition process.</span>
+                  <span>Our family business needed someone who understood the importance of maintaining relationships with long-term customers. For Legacy not only preserved these relationships but helped grow them further.</span>
+                  <i class="bi bi-quote quote-icon-right"></i>
+                </p>
+              </div>
+            </div><!-- End testimonial item -->
+            <div class="swiper-slide">
+              <div class="testimonial-item">
+                <img src="assets/img/testimonials/testimonials-3.jpg" class="testimonial-img" alt="">
+                <h3>Michael Foster</h3>
+                <h4>Foster Removal Services</h4>
+                <div class="stars">
+                  <i class="bi bi-star-fill"></i><i class="bi bi-star-fill"></i><i class="bi bi-star-fill"></i><i class="bi bi-star-fill"></i><i class="bi bi-star-fill"></i>
+                </div>
+                <p>
+                  <i class="bi bi-quote quote-icon-left"></i>
+                  <span>What impressed me most was how For Legacy kept our entire team together during the transition. They understood that our staff's expertise was key to our success.</span>
                   <i class="bi bi-quote quote-icon-right"></i>
                 </p>
               </div>
